--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   color: blue;
-  font-size: 12pt; 
+  font-size: 3em; 
 }
 
 h2 {
@@ -14,10 +14,10 @@ h2 {
 }
 
 .completed {
-  font-style: italic;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  background-color: white;
+  background: #ccc;
   text-decoration: underline;
 }
